RESOLVED FIXED11132
REGRESSION (r16727): Caret disappears when you're typing forward delete
https://bugs.webkit.org/show_bug.cgi?id=11132
Summary REGRESSION (r16727): Caret disappears when you're typing forward delete
mitz
Reported 2006-10-03 09:44:47 PDT
After you type a letter, delete or move in a text field or text area, the insertion point should always be visible. For example, as you hold down the space bar, the insertion point should be visible all the time as it moves. In TOT, it is mostly invisible (I think it's invisble more than 50% of the time). I think this regressed in r16727 (correct mistaken code that would restart blinking every time "invalidateSelection" is called even if the caret has not moved).
Attachments
Darin Adler
Comment 1 2006-10-03 09:57:10 PDT
OK. I'll take care of this.
Darin Adler
Comment 2 2006-10-03 11:21:46 PDT
Committed revision 16738.
mitz
Comment 3 2006-10-06 08:35:51 PDT
The insertion points still blinks when I hold down the "forward delete" key to delete a bunch of text after the insertion point.
Darin Adler
Comment 4 2006-10-06 10:10:11 PDT
OK, but that's a different bug so I would have liked a separate bug report.
Darin Adler
Comment 5 2006-10-07 07:44:59 PDT
The problem with forward delete is that the caret rectangle doesn't change -- I made the flashing logic based on whether the caret rectangle changes. I'll have to come up with something else.
Darin Adler
Comment 6 2006-10-21 18:31:11 PDT
Retitled to describe the remaining symptom.
Stephanie Lewis
Comment 7 2006-11-08 17:20:12 PST
radar 4827135
mitz
Comment 8 2007-01-27 15:17:13 PST
Seems to be fixed in TOT!
Darin Adler
Comment 9 2007-01-29 09:10:40 PST
Yes. Somewhere along the line, someone fixed this.
Note You need to log in before you can comment on or make changes to this bug.